.deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-hello-world-service
  namespace: differ
spec:
  selector:
    app: node-hello-world
  ports:
    - name: http
      port: 9090
      targetPort: http
