.deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-hello-world-ingress
  namespace: differ
  labels:
    app: node-hello-world
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - node-hello-world.nihatalim.com.tr
      secretName: node-hello-world-ingress-tls
  rules:
    - host: node-hello-world.nihatalim.com.tr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-hello-world-service
                port:
                  number: 9090
